UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Phoenix_Bid_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Costco_TPT__c</fullName>
        <label>Costco TPT $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_ASP_Dose__c</fullName>
        <formula>IF( Phoenix_Bid_Template_Refrence__c = &apos;ClarusOne&apos;, IF( Phoenix_Net_Sales_External__c != 0, (Phoenix_Net_Sales_External__c / Phoenix_Total_Selling_Unit__c), 0), IF(NOT(ISBLANK(Finance_Current_Sales__c)), (Finance_Current_Sales__c/ Phoenix_Total_Selling_Unit__c) ,IF(Phoenix_Current_Sales_Finance__c!= 0, (Phoenix_Current_Sales_Finance__c/ Phoenix_Total_Selling_Unit__c), 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current ASP/ Dose</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Admin_Fee__c</fullName>
        <label>Current Admin Fee %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Anda_Acquisition_Costs__c</fullName>
        <description>created for RXSS template</description>
        <label>Current Anda Acquisition Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Anda_CP_Price__c</fullName>
        <description>created for RXSS template</description>
        <label>Current Anda CP Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Anda_Invoice_Price__c</fullName>
        <description>created for RXSS template</description>
        <label>Current Anda Invoice Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Anda_Net_Model_Units__c</fullName>
        <description>created for RXSS template</description>
        <label>Current Anda Net Model Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Anda_Units__c</fullName>
        <description>created for RXSS template</description>
        <label>Current Anda Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_DRL_Share__c</fullName>
        <formula>If(OR(ISBLANK(Phoenix_DeadNet_TrckGR__c),Phoenix_DeadNet_TrckGR__c==0),0,(Phoenix_DeadNet_TrckGR__c  -  Round(Phoenix_Throughput_Cost1__c,2)  -  Phoenix_Current_Royalty__c  -  Phoenix_Current_Profit_Share_To_Partner1__c  -  Phoenix_Current_Profit_Share_To_Partner2__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current DRL Share</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Direct_Price__c</fullName>
        <label>Current Direct Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Direct_Selling_Unit__c</fullName>
        <label>Current Direct Selling Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Floor_Price__c</fullName>
        <formula>Phoenix_Product__r.Phoenix_IPA_Floor_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Indirect_Gaint_EagleUnit__c</fullName>
        <description>created for RXSS template</description>
        <label>Current Indirect Gaint Eagle Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Indirect_Price__c</fullName>
        <label>Current Indirect Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Indirect_Selling_Unit__c</fullName>
        <label>Current Indirect Selling Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_MCK_Position__c</fullName>
        <label>Current MCK Position</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_McK_RAD_Dead_net__c</fullName>
        <label>Current McK/RAD Dead net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Net_Indirect_Price__c</fullName>
        <label>Phoenix Current Net Indirect Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Net_Sales_Internal__c</fullName>
        <label>Current Net Sales  (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Per_Unit_Rebate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current  Per Unit Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Position__c</fullName>
        <label>Current Position</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Price_Calc__c</fullName>
        <formula>IF(Phoenix_Final_Approvd_Pricing_Contracts__c =0 ,  IF(  Phoenix_Current_Direct_Price__c =0,  Phoenix_Current_Indirect_Price__c , Phoenix_Current_Direct_Price__c ) ,Phoenix_Final_Approvd_Pricing_Contracts__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Price Calc</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Profit_Available_For_Dis__c</fullName>
        <formula>IF(Finance_Current_Sales__c != null, IF(Finance_Current_Sales__c = 0, 0, Phoenix_DeadNet_TrckGR__c - Phoenix_Throughput_cost__c-(Phoenix_DeadNet_TrckGR__c *Phoenix_Comm_Exps__c)- Phoenix_Current_Royalty__c),
IF(Phoenix_Current_Sales_Finance__c = 0, 0, Phoenix_DeadNet_TrckGR__c - Phoenix_Throughput_cost__c-(Phoenix_DeadNet_TrckGR__c *Phoenix_Comm_Exps__c)- Phoenix_Current_Royalty__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Profit Available For Distributio</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Profit_Share_To_Partner1__c</fullName>
        <formula>MAX( Phoenix_Current_Profit_Available_For_Dis__c  * Phoenix_PS_Partner_1percent__c,Phoenix_Min_profit_share_Partner_11__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Profit Share To Partner 1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Profit_Share_To_Partner2__c</fullName>
        <formula>MAX( Phoenix_Current_Profit_Available_For_Dis__c  * Phoenix_PS_Partner_2percent__c,Phoenix_Min_profit_share_Partner_21__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Profit Share To Partner 2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Rebate__c</fullName>
        <label>Current Rebate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Retail_Direct_Price__c</fullName>
        <description>created for RXSS template</description>
        <label>Current Retail Direct Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Retail_Direct_Units__c</fullName>
        <description>created for RXSS template</description>
        <label>Current Retail Direct Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Retail_Indirect_Net__c</fullName>
        <description>created for RXSS template</description>
        <label>Current Retail Indirect Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Retail_Indirect_Price__c</fullName>
        <description>created for RXSS template</description>
        <label>Current Retail Indirect Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Retail_Indirect_Units__c</fullName>
        <description>created for RXSS template</description>
        <label>Current Retail Indirect Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Royalty__c</fullName>
        <formula>Phoenix_DeadNet_TrckGR__c  *  Phoenix_Royaltypercent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Royalty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_SCM_Approved_Qty__c</fullName>
        <label>Current/SCM Approved Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Sales_Finance__c</fullName>
        <formula>Phoenix_DeadNet_TrckGR__c  *  Phoenix_Total_Selling_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Sales(Finance)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Supplier__c</fullName>
        <label>Current Supplier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_TP_MarginPercent__c</fullName>
        <formula>IF(OR(ISBLANK(Phoenix_Current_TP_Margin__c),Phoenix_Current_TP_Margin__c==0),0,(Phoenix_Current_TP_Margin__c  /  IF( Phoenix_Bid_Template_Refrence__c = &apos;ClarusOne&apos;,Phoenix_Net_Sales_External__c, IF(NOT(ISBLANK(Finance_Current_Sales__c )), Finance_Current_Sales__c , Phoenix_Current_Sales_Finance__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current TP Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_TP_Margin__c</fullName>
        <formula>IF(Finance_Current_Sales__c != NULL, IF(OR(ISBLANK(Finance_Current_Sales__c),Finance_Current_Sales__c==0),0,(IF( Phoenix_Bid_Template_Refrence__c = &apos;ClarusOne&apos;,Phoenix_Net_Sales_External__c, Finance_Current_Sales__c)  - ( Round(Phoenix_Throughput_Cost1__c,2)* Phoenix_Total_Selling_Unit__c))),IF(OR(ISBLANK(Phoenix_Current_Sales_Finance__c),Phoenix_Current_Sales_Finance__c==0),0,(IF( Phoenix_Bid_Template_Refrence__c = &apos;ClarusOne&apos;,Phoenix_Net_Sales_External__c, Finance_Current_Sales__c )  - ( Round(Phoenix_Throughput_Cost1__c,2)* Phoenix_Total_Selling_Unit__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current TP Margin $$$</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_WMT_Direct_Dead_net__c</fullName>
        <label>Current WMT Direct Dead net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_WMT_Indirect_Dead_net__c</fullName>
        <label>Current WMT Indirect Dead net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_WMT_Position__c</fullName>
        <label>Current WMT Position</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Wholesaler_Price__c</fullName>
        <description>created for RXSS template</description>
        <label>Current Wholesaler Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Wholesaler_Units__c</fullName>
        <description>created for RXSS template</description>
        <label>Current Wholesaler Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Approval_OTC__c</fullName>
        <label>Customer Approval (OTC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Send Back to Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Cash_Discount1__c</fullName>
        <formula>Phoenix_Customer_Cash_Discount__c *  Phoenix_WAC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Cash Discount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Cash_Discount__c</fullName>
        <formula>IF(Phoenix_Cash_Discount_NPR__c &gt; 0 , Phoenix_Cash_Discount_NPR__c, Phoenix_Bid__r.Phoenix_Customer__r.Phoenix_Cash_Discount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Cash Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Dead_Net1__c</fullName>
        <label>Customer Dead Net</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Dead_Net_McK_RAD_Propse__c</fullName>
        <label>Customer Dead Net McK + RAD  (Proposed)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Dead_net__c</fullName>
        <formula>Phoenix_Customer_Dead_Net1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Dead net (Internal Use)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Decline_Reasons__c</fullName>
        <label>Customer Decline Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Response - Closing bid</fullName>
                </value>
                <value>
                    <fullName>Declined - No reason given</fullName>
                </value>
                <value>
                    <fullName>Declined - Pricing not competitive</fullName>
                </value>
                <value>
                    <fullName>Declined - Customer no longer requires</fullName>
                </value>
                <value>
                    <fullName>Declined - Incument defended</fullName>
                </value>
                <value>
                    <fullName>Declined - Lead time not acceptable</fullName>
                </value>
                <value>
                    <fullName>Declined - Other</fullName>
                </value>
                <value>
                    <fullName>DRL submitting under new bid number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Fee__c</fullName>
        <formula>Phoenix_Bid__r.Phoenix_Customer__r.Phoenix_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Fee %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Fees__c</fullName>
        <formula>IF( 
Phoenix_Bid_Template_Refrence__c =&apos;Econdisc&apos;,
 IF(Phoenix_Wholesaler_Diff_Price_Indirect__c = 0 ,IF(Phoenix_ProposedContract_Bid_Price_Sales__c =0,Phoenix_Current_Indirect_Price__c,Phoenix_ProposedContract_Bid_Price_Sales__c),Phoenix_Wholesaler_Diff_Price_Indirect__c)* Phoenix_Contract_Mngment_Fee_Wholesaler__c
,
IF(Phoenix_Bid_Template_Refrence__c =&apos;Walgreens&apos;,
 IF(Phoenix_Final_Approvd_Pricing_Contracts__c = 0 , Phoenix_Contract_Mngment_Fee_Wholesaler__c
* Phoenix_Current_Indirect_Price__c, Phoenix_Contract_Mngment_Fee_Wholesaler__c
* Phoenix_Final_Approvd_Pricing_Contracts__c
),
IF(Phoenix_Final_Approvd_Pricing_Contracts__c = 0 ,  Phoenix_Bid__r.Phoenix_Proposed_Value_Admin_Fee__c 
* Phoenix_Current_Indirect_Price__c,IF(Phoenix_Current_Admin_Fee__c &gt; 0 ,Phoenix_Current_Admin_Fee__c,Phoenix_Bid__r.Phoenix_Proposed_Value_Admin_Fee__c )  
* Phoenix_Final_Approvd_Pricing_Contracts__c
)


 ) 


)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Fees</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Final_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Final Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Order_Analytics_Fee1__c</fullName>
        <formula>IF(Phoenix_Final_Approvd_Pricing_Contracts__c = 0 , Phoenix_Customer_Order_Analytics_Fee__c* Phoenix_Current_Indirect_Price__c, Phoenix_Customer_Order_Analytics_Fee__c * Phoenix_Final_Approvd_Pricing_Contracts__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Order Analytics Fee</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Order_Analytics_Fee__c</fullName>
        <formula>Phoenix_Bid__r.Phoenix_Customer__r.Phoenix_Order_Analytics_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Order Analytics Fee %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Rebates1__c</fullName>
        <formula>IF( Phoenix_Bid_Template_Refrence__c = &apos;ClarusOne&apos;, IF(Phoenix_Proposed_McK_OS_And_RAD_NCP__c = 0 ,IF(Phoenix_Sales_Proposed_NCP_McK_And_RAD__c=0,Phoenix_OS_RAD_NCP__c,Phoenix_Sales_Proposed_NCP_McK_And_RAD__c),Phoenix_Proposed_McK_OS_And_RAD_NCP__c ),
IF(Phoenix_Final_Approvd_Pricing_Contracts__c=0,IF( Phoenix_Bid_Template_Refrence__c = &apos;Econdisc&apos;,Phoenix_Current_Direct_Price__c 
,Phoenix_Current_Indirect_Price__c),Phoenix_Final_Approvd_Pricing_Contracts__c)) * 
IF( Phoenix_Bid_Template_Refrence__c = &apos;ClarusOne&apos;,  IF(Phoenix_Opening_Order_TPT_Per__c=0,Phoenix_Bid__r.Phoenix_Mck_RAD_Rebate__c,Phoenix_Opening_Order_TPT_Per__c) ,
IF( Phoenix_Proposed_Current_Rebate__c =0, Phoenix_Current_Rebate__c,Phoenix_Proposed_Current_Rebate__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Rebates</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Rebates__c</fullName>
        <formula>Phoenix_Bid__r.Phoenix_Customer__r.Phoenix_Rebates__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Rebates %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Requested_Days__c</fullName>
        <label>Customer Requested Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Response_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Response Line</label>
        <referenceTo>Phoenix_Customer_Response_Line__c</referenceTo>
        <relationshipLabel>Bid Line Items</relationshipLabel>
        <relationshipName>Bid_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Response</label>
        <referenceTo>Phoenix_Customer_Response__c</referenceTo>
        <relationshipLabel>Bid Line Items</relationshipLabel>
        <relationshipName>Bid_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Service_Comments__c</fullName>
        <label>Customer Service Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Service_Status__c</fullName>
        <label>Customer Service Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Not Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Service_Update_Comments__c</fullName>
        <label>Customer Service Update Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Service_Update_Status__c</fullName>
        <label>Customer Service Update Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_VIP1__c</fullName>
        <formula>(IF(Phoenix_Proposed_Est_VIP__c &gt; 0 ,Phoenix_Proposed_Est_VIP__c,Phoenix_Bid__r.Phoenix_Proposed_Value_Est_VIP__c )*IF(Phoenix_Final_Approvd_Pricing_Contracts__c =0 , Phoenix_Current_Indirect_Price__c, Phoenix_Final_Approvd_Pricing_Contracts__c
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer VIP</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_VIP_Per_Unit__c</fullName>
        <formula>IF(Phoenix_Final_Approvd_Pricing_Contracts__c = 0 , (IF(Phoenix_Proposed_Est_VIP__c &gt; 0 ,Phoenix_Proposed_Est_VIP__c,Phoenix_Bid__r.Phoenix_Proposed_Value_Est_VIP__c ) - Phoenix_Local_VIP__c ) * Phoenix_Current_Indirect_Price__c, (IF(Phoenix_Proposed_Est_VIP__c &gt; 0 ,Phoenix_Proposed_Est_VIP__c,Phoenix_Bid__r.Phoenix_Proposed_Value_Est_VIP__c ) - Phoenix_Local_VIP__c )* Phoenix_Final_Approvd_Pricing_Contracts__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer VIP Per Unit $</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_VIP__c</fullName>
        <formula>IF(Phoenix_Proposed_Est_VIP__c &gt; 0 ,Phoenix_Proposed_Est_VIP__c,Phoenix_Bid__r.Phoenix_Proposed_Value_Est_VIP__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer VIP %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Wbad_VIR1__c</fullName>
        <formula>IF(Phoenix_Final_Approvd_Pricing_Contracts__c = 0 , Phoenix_Bid__r.Phoenix_Group_VIP__c* Phoenix_Current_Indirect_Price__c, Phoenix_Bid__r.Phoenix_Group_VIP__c* Phoenix_Final_Approvd_Pricing_Contracts__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Wbad VIR $</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Wbad_VIR__c</fullName>
        <formula>Phoenix_Bid__r.Phoenix_Customer__r.Phoenix_Wbad_VIR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Wbad VIR %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bid Line Items</relationshipLabel>
        <relationshipName>Bid_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_status_internal_use__c</fullName>
        <label>Customer status- internal use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_DRL_Dead_Net_After_IOD_w_o_MR__c</fullName>
        <label>DRL Dead Net After IOD w/o Med &amp; R</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_DRL_Dead_net_W_o_IOD_Med_Returns__c</fullName>
        <label>DRL Dead net W/o IOD, Medicaid &amp; Returns</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_DRL_Margin_DRL__c</fullName>
        <formula>IF(Phoenix_Internal_Dead_Net_Price__c &gt; 0 , 
Phoenix_DRL_Share__c  /  Phoenix_Internal_Dead_Net_Price__c,
 0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DRL Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_DRL_Share_Impact__c</fullName>
        <formula>(Phoenix_DRL_Share__c * Phoenix_Final_Total_Selling_Unit__c)- (Phoenix_Current_DRL_Share__c * Phoenix_Total_Selling_Unit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DRL Share Impact</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_DRL_Share__c</fullName>
        <formula>Phoenix_Internal_Dead_Net_Price__c  -  Phoenix_Throughput_cost__c  -  Phoenix_Total_Profit_share__c  -  Phoenix_Royalty1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DRL Share</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Date_Fee__c</fullName>
        <label>Date Fee %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Day_s_Notice_Product_removal__c</fullName>
        <label>Days&apos; Notice - Product Removals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Days_Notice_Product_Discontinuat__c</fullName>
        <label>Days&apos; Notice - Product Discontinuation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_DeadNet_TrckGR__c</fullName>
        <label>DeadNet-TrckGR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Difference_ASP_Change__c</fullName>
        <formula>(Phoenix_Proposed_ASP_Dose__c  /  Phoenix_Current_ASP_Dose__c )-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference ASP % Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Difference_Bottles__c</fullName>
        <formula>IF(Phoenix_SCM_Final_Approval__c,Phoenix_Total_SCM_Approved_Qty__c ,Phoenix_Final_Total_Selling_Unit__c)  -  Phoenix_Total_Selling_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference Bottles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Difference_Doses__c</fullName>
        <formula>Phoenix_Final_Annual_Extended_Units__c  -   Phoenix_Doses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference Doses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Difference_Margin__c</fullName>
        <formula>Phoenix_Proposed_TP_Margin__c  -  Phoenix_Current_TP_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Difference_Price__c</fullName>
        <description>Difference Price - Price Variance</description>
        <formula>Phoenix_Price_Variance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Variance (Internal Use)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Difference_Sales__c</fullName>
        <formula>Phoenix_Proposed_Sales__c  - IF( Phoenix_Bid_Template_Refrence__c = &apos;ClarusOne&apos;,Phoenix_Net_Sales_External__c, IF(NOT(ISBLANK(Finance_Current_Sales__c)), Finance_Current_Sales__c , Phoenix_Current_Sales_Finance__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Difference_Volume__c</fullName>
        <description>Difference Volume - Volume Variance</description>
        <formula>Phoenix_Volume_Variance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume Variance (Internal Use)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Difference__c</fullName>
        <formula>Phoenix_Anda_Old_Acquisition_Costs__c  - Phoenix_Anda_New_Model_Acqusition_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Direct_Accerodo__c</fullName>
        <label>Direct Accerodo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Direct_CD_Per_Unit__c</fullName>
        <formula>IF(Phoenix_Final_Approvd_Pricing_Contracts__c =0 ,Phoenix_Current_Direct_Price__c ,Phoenix_Final_Approvd_Pricing_Contracts__c )* IF( Phoenix_Bid__r.Phoenix_Proposed_Cash_Terms__c =0,IF(Phoenix_Cash_Discount_NPR__c &gt; 0 , Phoenix_Cash_Discount_NPR__c,Phoenix_Bid__r.Phoenix_Current_CD__c),IF(Phoenix_Cash_Discount_NPR__c &gt; 0 , Phoenix_Cash_Discount_NPR__c,Phoenix_Bid__r.Phoenix_Proposed_Cash_Terms__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct CD Per Unit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Direct_CD__c</fullName>
        <description>created for RXSS template</description>
        <label>Direct CD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Direct_Cigna__c</fullName>
        <label>Direct Cigna</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Direct_Cordant__c</fullName>
        <label>Direct Cordant</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Direct_Dead_Net__c</fullName>
        <label>Direct Dead Net</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Direct_ESI__c</fullName>
        <label>Direct ESI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>